--- a/P003198.opf/meta.yml
+++ b/P003198.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P003198
+id: P003198
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W30154
   title: ཚངས་དབྱངས་རྒྱ་མཚོའི་གསང་བའི་རྣམ་ཐར་སོགས།
-  volume: ''
   author: ''
+  volumes: {}
