--- a/P003198.opf/meta.yml
+++ b/P003198.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W30154
   title: ཚངས་དབྱངས་རྒྱ་མཚོའི་གསང་བའི་རྣམ་ཐར་སོགས།
   author: ''
-  volumes: {}
+  volumes:
+    25dc581c6812460a972801218807e3f8:
+      image_group_id: I5944
+      title: ''
+      volume_number: 1
+      total_pages: 482
