--- a/P003198.opf/layers/v001/Pagination.yml
+++ b/P003198.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: d893649e022642529f92ba4674399dd4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7a6971377bf54029a754ec59ea010367:
